 <resources>
    <!--<string name="app_name">NDDB</string>-->
    <string name="app_name">Kadam For Kurien</string>

    <string name="welcome">Welcome NDDB App</string>
    <string name="choose_lan">Choose your language</string>
    <string name="next">Next</string>

    <string name="enter_mobilenumber">Enter Mobile Number</string>
    <string name="otp_will_be_send_to_mobile_number">One-time verification OTP will be sent to the above mobile number</string>
    <string name="send_sms">send verification code</string>
    <string name="enter_mobile_number">Please enter mobile number</string>
    <string name="enter_valid_mobile_number">Please enter valid mobile number</string>
    <string name="new_user_register_here">New user? Register here</string>
    <string name="registration">Registration</string>
    <string name="otp_screen">OTP Verification</string>
    <string name="otp_sent_on_mobile_number">Enter the OTP sent to </string>
    <string name="resend_otp">Did not receive OTP?</string>
    <string name="resend"> Resend</string>

    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="dob">Date of Birth</string>
    <string name="submit">Submit</string>
    <string name="user_type">User Type</string>
    <string name="select_state">Select State</string>
    <string name="select_city">Select City</string>

    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="verify_continue"><![CDATA[VERIFY & CONTINUE]]></string>

    <string name="menu_dashboard">Kadam for Kurien</string>
    <string name="menu_event">Event</string>
    <string name="menu_walked_history">History</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_change_language">Language</string>
    <string name="menu_profile">Profile</string>

    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="transgender">Transgender</string>
    <string name="dontdis">Don\'t Disclose</string>

    <string name="message_no_network_connected_str">No network connected!</string>
    <string name="message_something_went_wrong_str">Something went wrong!</string>
    <!--<string name="your_total_step_walked">Steps Walked</string>-->
    <string name="your_total_step_walked">Steps Today </string>
    <string name="target">Target: 2500/day</string>
    <string name="updated">Updated:</string>
    <string name="total_contributed_steps">Total Contribution </string>
    <string name="your_rank">Congratulations! You currently rank\n</string>
    <string name="among_participants">among all participants.</string>
    <!--<string name="thank_you">Thank you for your contribution. Keep walking.</string>-->
    <string name="thank_you">Thank you for joining the world’s largest walkathon by contributing to the 200 million footsteps for 200 million tonnes of milk to remember the work and life of Dr. Verghese Kurien – the Milkman of India.</string>
    <string name="log_in">Log In</string>
    <string name="for_the_best_experience_nwith_nddb_walkathos">For the best experience \nWith NDDB Walkathos</string>
    <!--<string name="virtual_walked">"\"Kadam for Kurien\"" is a virtual Walkathon to tribute the Milk Man of India - Dr. Verghese Kurien.</string>-->
    <string name="virtual_walked">Press the start button to contribute your steps to the 200 million footsteps for 200 million tonnes of milk to remember the work and life of Dr. Verghese Kurien – the Milkman of India. Click on stop once you have walked your miles.</string>
    <string name="contribute">To contribute your steps to the target of 200 million steps, click on start. To register your steps, click on stop once you have walked your mile.</string>

    <string name="error_alert">Alert</string>
    <string name="location_setting_cannot_be_fixed_here">Location settings are inadequate, and cannot be fixed here. Fix in Settings.</string>
    <string name="please_disable_flight_mode">Please disable flight mode</string>
    <string name="fetching_location">Fetching Location</string>
    <string name="settings_location_required"><![CDATA[Please enable Location.]]></string>
    <string name="no_location_detected">No location detected. Make sure location is enabled on the device.</string>
    <string name="high_accuracy_location_not_available">High accuracy location is not available currently.Please try again, preferably with internet connectivity</string>
    <string name="permission_rationale">Location permission is needed for User location</string>
    <string name="permission_denied_explanation">Permission was denied, but needed for User Location.</string>
    <string name="location_failed_permission_not_granted">Location failed.Location permission not granted.</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="current_steps_nwalked">Current Steps \nWalked</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="register_walkings">Register Walkings</string>
    <string name="step_walked">Steps</string>
    <string name="facilitator">Facilitator</string>
    <string name="enter_number_of_people">Enter Number of People</string>
    <string name="register">Register</string>
    <string name="state">State</string>
    <string name="district">District</string>
    <string name="phone_number">Phone Number</string>
    <string name="photos">Photos</string>
    <string name="videos">Videos</string>
    <string name="registered_mobile">Registered Mobile</string>
    <string name="select_language">Please choose any language first</string>
    <string name="are_you_sure_want_logout">Are you sure you want to Logout?</string>
    <string name="are_you_sure_want_start_event">Are you sure you want to start the event?</string>
    <string name="are_you_sure_want_stop_event">Are you sure you want to stop the event?</string>
    <string name="gallery_text">Check out the media gallery below to see some glimpses from the life and work of Dr. Kurien</string>
    <!--<string name="alert_dialog">Thank you for your interest in Event {Event name}. Event will be start on {Date}.</string>-->
    <string name="alert_dialog">Thank you for your interest in Event Kadam for Kurien. Event will be start on 26-Nov-2021.</string>
    <string name="ok">Ok</string>

     <string name="thank_you_participating">Thank you for participating in Kadam for Kurien event.</string>
    <string name="lets_start">Let\s Get Started</string>
    <string name="enter_mobile_number_to_register">Please enter your 10 digit mobile number to register.</string>
   <!-- <string name="yes">Yes</string>
    <string name="no">No</string>-->

    <string name="validation_first_name">Please Enter First Name</string>
    <string name="validation_last_name">Please Enter Last Name</string>
    <string name="validation_state">Please Select State</string>
    <string name="validation_city">Please Select District</string>
    <string name="select_gender">Please Select Gender</string>
    <string name="select_usertype">Please Select User Type</string>
    <string name="no_city_msg">No any city on selected state </string>
    <string name="please_enter_otp">Please Enter OTP</string>
    <string name="country_code">+91</string>
    <string name="log_out">Logout</string>

     <string name="dear">Dear</string>
     <string name="you_have">your steps today</string>

    <string name="history_total_step">Total Steps Walked</string>

    <string name="history_cograt_msg">Congratulations! You currently rank 100 among all participants.</string>

    <string name="history_thank_msg">Thank you for your contribution. Keep walking.</string>

    <string name="event_alert_msg">This feature will get activated on 26-Nov-2021 date</string>

     <string name="download_certificate">You can download certificate between 26th Nov to 30th Nov 2021.</string>

    <!--<string name="kadam_for_kurien">Kadam for Kurien</string>-->
     <string name="please_enter_num_of_people">Please Enter Number of People</string>
     <string name="event_tv">To contribute your steps to the target of 200 million steps</string>
     <string name="event_start_date">Event will be starts on 26-11-2021</string>
     <string name="thank_you_for_using_app">Kadam For Kurien event is completed successfully. Now you can safely uninstall this application.</string>
     <string name="please_enter_valid_count">Please enter valid count</string>

     <string-array name="user_type_array">
        <item>Milk Union</item>
        <item>Individual</item>
        <item>Farmer</item>
    </string-array>

    <string-array name="india_states">
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttaranchal</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>

</resources>