<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.devit.nddb.Activity.ui.home.HomeFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_event"
        android:name="com.devit.nddb.Activity.ui.event.EventFragment"
        android:label="@string/menu_event"
        tools:layout="@layout/event_fragment" />

    <fragment
        android:id="@+id/nav_walked_history"
        android:name="com.devit.nddb.Activity.ui.walked_history.WalkedHistoryFragment"
        android:label="@string/menu_walked_history"
        tools:layout="@layout/walked_history_fragment" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.devit.nddb.Activity.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_change_language"
        android:name="com.devit.nddb.Activity.ui.change_language.ChangeLanguageFragment"
        android:label="@string/menu_change_language"
        tools:layout="@layout/change_language_fragment" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.devit.nddb.Activity.ui.slideshow.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />


</navigation>