<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.ui.slideshow.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_230sdp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_180sdp"
            android:layout_gravity="center"
            android:contentDescription="@string/nav_header_desc"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/top_profile_bg" />

        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:src="@drawable/dr_kurian_with_white_bg" />

       <!-- <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_180sdp">

            <TextView
                android:id="@+id/tv_f_l_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/nunito_bold"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                tools:text="Jon Doe" />
        </RelativeLayout>-->
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/nunito_medium"
                android:text="@string/fname"
                android:textColor="@color/font_head_color"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/frag_profile_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:fontFamily="@font/nunito_bold"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@color/grey" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/nunito_medium"
                android:text="@string/lname"
                android:textColor="@color/font_head_color"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/frag_profile_lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:fontFamily="@font/nunito_bold"

                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@color/grey" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/nunito_medium"
                android:text="@string/user_type"
                android:textColor="@color/font_head_color"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/frag_profile_utype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:fontFamily="@font/nunito_bold"

                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@color/grey" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/nunito_medium"
                android:text="@string/state"
                android:textColor="@color/font_head_color"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/frag_profile_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:fontFamily="@font/nunito_bold"

                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@color/grey" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/nunito_medium"
                android:text="@string/district"
                android:textColor="@color/font_head_color"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/frag_profile_district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:fontFamily="@font/nunito_bold"

                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@color/grey" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/nunito_medium"
                android:text="@string/gender"
                android:textColor="@color/font_head_color"
                android:textSize="@dimen/_10sdp" />


                <TextView
                    android:layout_marginTop="@dimen/_10sdp"
                    android:id="@+id/fragment_profile_gender_tv"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="75dp"
                    android:layout_height="30dp"
                    android:background="@drawable/round_orange"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/male"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/nunito_medium"
                android:text="@string/phone_number"
                android:textColor="@color/font_head_color"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/frag_profile_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:fontFamily="@font/nunito_bold"

                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@color/grey" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>